--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 </head>
 <body>
     <div id="base" onscroll="testScroll()" >
-        <section class="section flex-container", id="section-one-background">
-          <header id="header-navigation-bar"><h1>top</h1></header>
-          <div id="section-one-content"><h1>bottom</h1></div>
+        <section class="section flex-container" id="section-one-background">
+          <header id="header-navigation-bar">
+            <ul class="flex-container">
+              <li>:)</li>
+              <li>01</li>
+              <li>02</li>
+              <li>03</li>
+              <li>04</li>
+            </ul>
+          </header>
+          <div id="section-one-content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+          <div id="section-one-content-two"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
         </section>
-        <section class="section flex-container", id="sectionTwo"><h1>DOS</h1></section>
-        <section class="section flex-container", id="sectionThree"><h1>TRES</h1></section>
-        <section class="section flex-container", id="sectionFour"><h1>CUATRO</h1></section>
+        <section class="section flex-container" id="sectionTwo"><h1>DOS</h1></section>
+        <section class="section flex-container" id="sectionThree"><h1>TRES</h1></section>
+        <section class="section flex-container" id="sectionFour"><h1>CUATRO</h1></section>
     </div>
     <nav id="navigator">
         <ul>
@@ -31,7 +40,7 @@
               </svg> </li>
             <li class="navegador-lateral-li" onclick="navigation('base', 4)"> <svg height="100" width="100">
                 <circle cx="50" cy="50" r="4" stroke="black" stroke-width="3" fill="white" />
-              </svg> </i></li>
+              </svg> </li>
         </ul> 
     </nav>
 </body>
