--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </section>
         <section class="section flex-container" id="sectionTwo"><h1>DOS</h1></section>
         <section class="section flex-container" id="sectionThree"><h1>TRES</h1></section>
-        <section class="section flex-container" id="sectionFour"><h1>CUATRO</h1></section>
+        <section class="section flex-container" id="sectionFour">
+          <button type="button" id="form-button" onclick="toggleForm()">Click Me!</button>
+        </section>
     </div>
     <nav id="navigator">
         <ul>
@@ -43,5 +45,46 @@
               </svg> </li>
         </ul> 
     </nav>
+    <div id="form-container">
+      <button type="button" id="form-button" onclick="toggleForm()">Click Me!</button>
+      <form class="generated-form"  method="GET" action="submit.php"  target="_self">
+        <fieldset>
+          <label for="text">Text:</label><br>
+            <input type="text" id="text" name="text"><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
+            <label for="password">Email:</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label for="number">Number:</label><br>
+            <input type="number" id="number" name="number"><br>
+            <label for="url">Url:</label><br>
+            <input type="url" id="url" name="url"><br>
+            <label for="file">File:</label><br>
+            <input type="file" id="file" name="file"><br><br>
+            <label for="cars">Choose a car:</label><br>
+            <select id="cars">
+              <option value="volvo">Volvo</option>
+              <option value="saab">Saab</option>
+              <option value="mercedes">Mercedes</option>
+              <option value="audi">Audi</option>
+            </select> <br><br>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label><br><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1"> I have a bike</label><br>
+            <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+            <label for="vehicle2"> I have a car</label><br>
+            <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+            <label for="vehicle3"> I have a boat</label><br><br>
+            <textarea id="w3codeGenText" name="textarea" rows="3" cols="50"> w3codegenerator is a platform which provides tools to generate code online.
+            </textarea><br><br>
+            <input type="submit" value="Submit"><br><br>
+        </fieldset>
+      </form>
+    </div>
 </body>
 </html>
