Ajusto un poco el formulario y se agrego comentarios en JS

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
             <label for="vehicle2"> I have a car</label><br>
             <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
             <label for="vehicle3"> I have a boat</label><br><br>
-            <textarea id="w3codeGenText" name="textarea" rows="3" cols="50"> w3codegenerator is a platform which provides tools to generate code online.
-            </textarea><br><br>
+            <textarea id="w3codeGenText" name="textarea" rows="3" cols="50"></textarea><br><br>
             <input type="submit" value="Submit"><br><br>
         </fieldset>
       </form>
