--- a/testing/index.html
+++ b/testing/index.html
@@ -8,36 +8,32 @@
     <link rel="stylesheet" href="style.css">
     <script src="scrpt.js"></script>
     <title>Cats and Dogs</title>
+    <script src="https://kit.fontawesome.com/5c97971593.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <section id="inicio">
         <header id="header-navigation-bar">
-          <ul>
-            <li onclick="navigation('base', 1)">:)</li>
-            <li class="cat" onclick="navigation('base', 1)">CATS!</li>
-            <li onclick="navigation('base', 2)">HISTORY</li>
-            <li onclick="navigation('base', 3)">MAPA</li>
-            <li onclick="navigation('base', 4)">YOUR DATA</li>
-          </ul>
+            <ul>
+                <li onclick="navigation('base', 1)"><i class="fa-solid fa-cat fa-2xl"></i></li>
+                <li class="cat" onclick="navigation('base', 1)">CATS!</li>
+                <li onclick="navigation('base', 2)">HISTORY</li>
+                <li onclick="navigation('base', 3)">MAPA</li>
+                <li onclick="navigation('base', 4)">YOUR DATA</li>
+            </ul>
         </header>
-        <div>
-            <div id="section-one-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                  est laborum.</p>
-              </div>
-              <div id="section-one-content-two">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                  est laborum.</p>
-              </div>
+        <div class="contenedor-contenido">
+            <div>
+                <h1>CATS!... CATS?... CATS!</h1>
+                <p>¿Que es un gato? ¿como es un gato? ¿Porque un gato? Estas son greguntas que estoy seguro te hs
+                    preguntado en algun momento de tu vida. <br>
+                    Esta paguina no ofrece ninguna y todas las respuestas a estas preguntas, buena suerte.</p>
+            </div>
+            <div>
+                <img src="cat-stretch-black-silhouette.png" alt="Silueta de un gato" class="responsive">
+            </div>
         </div>
-      </section>
+    </section>
 </body>
 
 </html>
