--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Cats and Dogs</title>
 </head>
 
-<body id="#body">
+<body id="body">
   <!-- Div id "base" contiene las cuatro principales secciones de la pagina ubicados en la "capa" o z-index base abajo de todos -->
   <div id="base">
     <!-- Section id "section-one-background" contiene la primera seccion que se ve al abrir la pagina, esta a su ves contiene el header con botones de navegacion, esta es un contenedor grid-->
